trying to fix responsiveness on vercel deployment, looks fine on local server, but for some reason mobile inputs are losing their box-shadowing and centering is off

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,12 @@ link {
   font-size: 1.6rem;
 }
 /* MEDIA QUERIES */
-
-.frontPageCatchAll {
-  text-align: center;
+@media (max-width: 650px){
+  .frontPageCatchAll {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
+
